# taskwarrior-windows

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  RELEASING.md  cmake.h.in
.github/: dependabot.yml
.github/workflows/: checks.yml  docker-image.yaml  release-check.yaml  tests.yaml  windows-build.yml  windows-tests.yml
cmake/: CXXSniffer.cmake
doc/devel/contrib/: releasing.md
doc/man/: task-sync.5.in  task.1.in  taskrc.5.in
scripts/hooks/: on-add  on-add.the  on-exit  on-exit.shadow-file  on-modify
src/: CMakeLists.txt  Context.cpp  DOM.cpp  Eval.cpp  Filter.cpp  Filter.h  Hooks.cpp  Hooks.h  Lexer.cpp  Operation.h  TDB2.cpp  TDB2.h  TF2.cpp  TF2.h  Task.cpp  Task.h  Variant.cpp  Variant.h  ViewTask.cpp  dependency.cpp  dependency.h  feedback.cpp  feedback.h  legacy.cpp  legacy.h  main.cpp  nag.cpp  nag.h  recur.cpp  recur.h  rules.cpp  rules.h  sort.h  util.cpp  util.h
src/columns/: ColDepends.cpp  ColTags.cpp  ColTypeDuration.cpp  ColUDA.cpp  ColUDA.h  Column.cpp
src/commands/: CmdAdd.cpp  CmdAnnotate.cpp  CmdAppend.cpp  CmdBurndown.cpp  CmdCalendar.cpp  CmdColor.cpp  CmdColumns.cpp  CmdContext.cpp  CmdCount.cpp  CmdCustom.cpp  CmdDelete.cpp  CmdDenotate.cpp  CmdDone.cpp  CmdDuplicate.cpp  CmdEdit.cpp  CmdExport.cpp  CmdGet.cpp  CmdHistory.cpp  CmdIDs.cpp  CmdImport.cpp  CmdImportV2.h  CmdInfo.cpp  CmdInfo.h  CmdLog.cpp  CmdModify.cpp  CmdNews.cpp  CmdNews.h  CmdPrepend.cpp  CmdProjects.cpp  CmdPurge.cpp  CmdShow.cpp  CmdStart.cpp  CmdStats.cpp  CmdStop.cpp  CmdSummary.cpp  CmdSync.cpp  CmdTags.cpp  CmdTimesheet.cpp  CmdUDAs.cpp  CmdUndo.cpp  (+4 more)
src/taskchampion-cpp/: CMakeLists.txt  Cargo.toml  build.rs
test/: col_test.cpp  columns.test.py  lexer_test.cpp  make_tc_task.cpp  quotes.test.py  t_test.cpp  taskrc.test.py  tdb2_test.cpp  tw_2689_test.cpp  undo.test.py  unusual_task.test.py  util_test.cpp  variant_divide_test.cpp  view_test.cpp
